--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,7 +29,7 @@ dock_7="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/GamePlay/main.tscn", "res://Archive/Scenes/Character/Player/player_camera.tscn", "res://Scenes/Weapon/wp_01.tscn", "res://Scenes/Character/Player/noob.tscn", "res://Scenes/Weapon/bullet.tscn", "res://Scenes/Character/Enemy/SwampMan.tscn", "res://Archive/Scenes/UI/aim_cursor.tscn", "res://Archive/Scenes/Scenes/GamePlay/main.tscn", "res://Scenes/Items/spawner.tscn")
-current_scene="res://Scenes/Weapon/wp_01.tscn"
+current_scene="res://Scenes/GamePlay/main.tscn"
 center_split_offset=-290
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
