--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -8,6 +8,12 @@
       "executablePath": "D:\\Godot\\Godot_v4.2.1-stable_mono_win64.exe",
       "commandLineArgs": "--path . --verbose",
       "workingDirectory": "."
+    },
+    "VzDebug": {
+      "commandName": "Executable",
+      "executablePath": "D:\\Godot_v4.2.1-stable_mono_win64\\Godot_v4.2.1-stable_mono_win64.exe",
+      "commandLineArgs": "--path . --verbose",
+      "workingDirectory": "."
     }
   }
 }
